--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,17 @@
   		<artifactId>commons-lang3</artifactId>
   		<version>3.1</version>
   	</dependency>
+	
+  	<dependency>
+  		<groupId>net.java.dev.jgoodies</groupId>
+  		<artifactId>forms</artifactId>
+  		<version>1.1.0</version>
+  	</dependency>
+  	
+  	<dependency>
+  		<groupId>net.java.dev.jgoodies</groupId>
+  		<artifactId>looks</artifactId>
+  		<version>2.1.4</version>
+  	</dependency>
   </dependencies>
 </project>
